--- a/views/login.jade
+++ b/views/login.jade
@@ -23,7 +23,7 @@ html
       section.login-title-section
         h1 Log In
       section.user-data-section
-        form(action='' method='post' name='login')
+        form(action='/billy' method='post' name='login')
           input(type='text' name='username' placeholder='Username' required='')
           input(type='password' name='password' placeholder='Password' required='')
           label.custom-button
