--- a/views/register.jade
+++ b/views/register.jade
@@ -13,12 +13,13 @@ html
             h1.logo
               a(href='index.html' rel='home')
                 img(src='/images/meme prime.png' alt='Meme Team Logo')
-              label
-                | ADHD Prime
+              label ADHD Prime
           li
             a(href='login.html') Log in
           li
-            a Something
+            a(href='devices.html') Devices
+          li
+            a Guide
     main.main-section
       section.register-title-section
         h1 Register
