--- a/views/login.jade
+++ b/views/login.jade
@@ -13,10 +13,11 @@ html
             h1.logo
               a(href='index.html' rel='home')
                 img(src='/images/meme prime.png' alt='Meme Team Logo')
-              label
-                | ADHD Prime
+              label ADHD Prime
           li
             a(href='login.html') Log in
+          li
+            a(href='devices.html') Devices
           li
             a Guide
     main.main-section
