--- a/views/devices.jade
+++ b/views/devices.jade
@@ -51,9 +51,9 @@ html
       section.name-section
         ul
           li
-            p name
-            p email
-            p number
+            p Dominic DiMailo
+            p dadimailo@student.ysu.edu
+            p 330-717-3451
           li
             p Tyler Bouck
             p tsbouck@student.ysu.edu
