--- a/views/register.jade
+++ b/views/register.jade
@@ -48,18 +48,18 @@ html
         h5 HACKATHON APRIL 2023
       section.name-section
         ul
+         li
+            p Dominic DiMailo
+            p dadimailo@student.ysu.edu
+            p 330-717-3451
           li
-            p name
-            p email
-            p number
+            p Tyler Bouck
+            p tsbouck@student.ysu.edu
+            p 440-812-6431
           li
-            p name
-            p email
-            p number
-          li
-            p name
-            p email
-            p number
+            p Elion Oliver
+            p ekoliver@student.ysu.edu
+            p 330-318-0068
           li
             p Edwin Patterson II
             p Edpatterson01@student.ysu.edu
